Add some services

--- a/services.html
+++ b/services.html
@@ -137,11 +137,18 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
-                            &emsp;2022 (Student Research Competition)<br />
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR):<br />
+                            &emsp;2022 (Technical Papers Track)<br />
                             IEEE International Conference on Program Comprehension (ICPC):<br />
                             &emsp;2022 (Research Track)<br />
                             &emsp;2020 (Research Track)<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft):<br />
+                            &emsp;2022 (Technical Papers Track)<br />
+                            &emsp;2021 (Technical Papers Track)<br />
+                            &emsp;2019 (Student Research Competition)<br />
+                            &emsp;2018 (Student Research Competition)<br />
+                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
+                            &emsp;2022 (Student Research Competition)<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER):<br />
                             &emsp;2022 (Research Track)<br />
@@ -155,11 +162,6 @@
                             &emsp;2021 (Tool Demo Track)<br />
                             &emsp;2019 (Tool Demo Track)<br />
                             &emsp;2018 (Tool Demo Track)<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems
-                            (MOBILESoft):<br />
-                            &emsp;2021 (Technical Papers Track)<br />
-                            &emsp;2019 (Student Research Competition)<br />
-                            &emsp;2018 (Student Research Competition)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE):<br />
                             &emsp;2020 (Tool Demo Track)<br />
@@ -200,13 +202,11 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            Innovations in Software Engineering Conference (ISEC): 2022<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2021, 2019, 2018, 2016<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research
-                            Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
-                            International Conference on Evaluation and Assessment in Software Engineering (EASE):
-                            2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering
-                            (SANER): 2018, 2017<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
+                            International Conference on Evaluation and Assessment in Software Engineering (EASE): 2020<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2018, 2017<br />
                             International Conference on Business Information Systems (BIS): 2017, 2016, 2015<br />
                             International Conference on Distributed Multimedia Systems (DMS): 2016, 2015<br />
                             International Conference on Enterprise Information Systems (ICEIS): 2017, 2016, 2015
@@ -218,24 +218,18 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of
-                            Milano Bicocca, Virtual, July 7th, 2021<br />
+                            Code Smell Detection: the Ecstasy of Machine Learning, Utrecht University, Utrecht, October 6th, 2021<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of Milano Bicocca, Virtual, July 7th, 2021<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Virtual, April 9th, 2021<br />
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
-                            University Eindhoven, Virtual, December 10th, 2020<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical University Eindhoven, Virtual, December 10th, 2020<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Virtual, June 3rd, 2020<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
-                            Salerno, Virtual, March 25th, 2020<br />
-                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
-                            3rd, 2019<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
-                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels,
-                            Belgium, March 23rd, 2017
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. University of Salerno, Virtual, March 25th, 2020<br />
+                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February 3rd, 2019<br />
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
+                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels, Belgium, March 23rd, 2017
                         </p>
                     </div>
                 </div>
