Update intro and projects

--- a/index.html
+++ b/index.html
@@ -108,25 +108,23 @@
                                 target="_blank">University of Salerno</a>, advised by <a
                                 href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De
                                 Lucia</a>.<br />
-                            I am a work package leader in <a href="https://radon-h2020.eu/" target="_blank">RADON</a>,
-                            an H2020 project that provides an integrated development environment for serverless-based
+                            I was a work package leader in <a href="https://radon-h2020.eu/" target="_blank">RADON</a>,
+                            an H2020 project to provide a Devops-fashioned IDE for serverless-based
                             development.<br />
-                            My research is on <b>empirical software engineering</b>, particularly, <b>software
+                            My research is on <b>empirical software engineering</b>, particularly <b>software
                                 maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
                                 learning</b>, <b>search-based
-                                algorithms</b>, and <b>mining of software repositories</b>.
-                            I serve as a program committee member of international conferences, and as a
+                                algorithms</b>, and <b>mining of software repositories</b>.<br />
+                            I serve as a program committee member for international conferences and
                             referee for various international journals in software engineering and artificial
-                            intelligence.<br />
-                            Apart from research and teaching, I am involved in dissemination and exploitation
-                            activities. I am a member of the <a
+                            intelligence. I am a member of the <a
                                 href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca"
-                                target="_blank">TOSCA technical committee</a> and co-lead the "Emerging Compute
-                            Platforms ad-hoc", which focuses on adopting TOSCA as the Infrastructure-as-Code language
-                            for serverless applications. I am a member-at-large of the <a
+                                target="_blank">TOSCA technical committee</a> and I co-lead the "Emerging Compute
+                            Platforms ad-hoc". I am an IEEE Software initiative team member and the social
+                            media manager of Science of Computer Programming. Finally, I am a member at large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities"
                                 target="_blank">IEEE
-                            Conference Activities Committee</a>.<br />
+                                Conference Activities Committee</a>.<br />
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
                 </div>
