--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,9 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
-                <h2 class="mb-2">Current Projects</h2>
+                <!-- <h2 class="mb-2">Current Projects</h2>-->
+
+                <h2 class="mb-2">Previous Projects</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -108,8 +110,6 @@
                         <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
-
-                <h2 class="mb-2">Previous Projects</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -150,6 +150,21 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">RepoMiner</h4>
+                        <p class="card-text text-justify small">RepoMiner} is a language-agnostic tool developed to
+                            support software engineering researchers in creating datasets to support any study on defect
+                            prediction.RepoMiner automatically collects failure data from software components, labels
+                            them as failure-prone or neutral, and calculates metrics to be used as ground truth for
+                            defect prediction models. It is released under the Apache 2.0 license.</p>
+                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-repository-miner"
+                                target="_blank">Source Code</a> - <a
+                                href="https://radon-h2020.github.io/radon-repository-miner/" target="_blank">Documentation</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">AnsibleMetrics</h4>
                         <p class="card-text text-justify small">AnsibleMetrics is a Python-based static source code
                             measurement tool to characterize Infrastructure-as-Code. It analyzes Ansible projects, but
@@ -158,7 +173,7 @@
                             infrastructure code. It is released under the Apache 2.0 license.</p>
                         <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics"
                                 target="_blank">Source Code</a> - <a
-                                href="https://radon-h2020.github.io/radon-ansible-metrics">Documentation</a>
+                                href="https://radon-h2020.github.io/radon-ansible-metrics" target="_blank">Documentation</a>
                         </p>
                     </div>
                 </div>
