--- a/index.html
+++ b/index.html
@@ -95,41 +95,76 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="mb-5 text-justify">I am an assistant professor at the <a
-                                href="http://jade-lab.github.io/" target="_blank">Jheronimus Academy Data and
-                                Engineering Lab</a> of the <a href="https://www.jads.nl/" target="_blank">Jheronimus
-                                Academy of Data Science</a>, a collaboration between
-                            Tilburg University and Eindhoven Technical University.<br />
-                            From 2018 to 2019, I was a postdoctoral fellow at the <a href="http://soft.vub.ac.be/soft/"
-                                target="_blank">Software Languages Lab</a> of the <a href="https://www.vub.be/"
-                                target="_blank">Vrije Universiteit Brussel</a> with <a
-                                href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br />
-                            In 2018, I received a Ph.D. from the <a href="https://web.unisa.it/en/home"
-                                target="_blank">University of Salerno</a>, advised by <a
-                                href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De
-                                Lucia</a>.<br />
-                            I was a work package leader in <a href="https://radon-h2020.eu/" target="_blank">RADON</a>,
-                            an H2020 project to provide a Devops-fashioned IDE for serverless-based
-                            development.<br />
+                        <p class="mb-5 text-justify">I am an assistant professor at the Department of Computer Science
+                            of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
                             My research is on <b>empirical software engineering</b>, particularly <b>software
                                 maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
                                 learning</b>, <b>search-based
                                 algorithms</b>, and <b>mining of software repositories</b>.<br />
-                            I serve as a program committee member for international conferences and
-                            referee for various international journals in software engineering and artificial
-                            intelligence. I am a member of the <a
-                                href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca"
-                                target="_blank">TOSCA technical committee</a> and I co-lead the "Emerging Compute
-                            Platforms ad-hoc". I am an IEEE Software initiative team member and the social
-                            media manager of Science of Computer Programming. Finally, I am a member at large of the <a
-                                href="https://www.computer.org/volunteering/boards-and-committees/technical-activities"
-                                target="_blank">IEEE
-                                Conference Activities Committee</a>.<br />
+                            I serve as a program committee member for international conferences and a
+                            referee for international journals in software engineering and artificial
+                            intelligence.<br />
+                            I am a member at large of the <a href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE Conference Activities Committee</a>.<br />
+                            I serve as editor for Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming, program committee member for international conferences, and referee for international journals in software engineering and artificial intelligence.<br />
+                            I am an IEEE Software initiative team member and the social media manager of Elsevier
+                            Science of Computer Programming.<br />
+                            Finally, I am a member of the <a
+                            href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
+                            committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
+                            
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
                 </div>
 
                 <div class="row">
+                    <div class="col-sm-6">
+                        <h3 class="mb-2">Timeline</h3>
+                        <ul>
+                            <li>January 2022 - now</li>
+                            <ul>
+                                <li>Assistant Professor @ <a href="https://www.unisa.it/">University of Salerno</a></li>
+                                <li>Department of Computer Science</li>
+                            </ul>
+                            </li>
+                            <li>January 2020 - December 2021</li>
+                            <ul>
+                                <li>Assistant Professor @ <a href="https://www.jads.nl/">Jheronimus
+                                        Academy of Data Science</a></li>
+                                <li>with Prof. Willem-Jan van den Heuvel</li>
+                            </ul>
+                            </li>
+                            <li>January 2018 - December 2019</a>
+                                <ul>
+                                    <li>Post-doc Researcher @ <a href="https://www.vub.be/">Vrije
+                                            Universiteit Brussel</a></li>
+                                    <li>with Prof. Coen De Roover</li>
+                                </ul>
+                            </li>
+                            <li>December 2014 - March 2018
+                                <ul>
+                                    <li>Ph.D. in Management & Information Technology @ <a
+                                            href="https://www.unisa.it/">University of Salerno</a></li>
+                                    <li>Funded by University of Salerno</li>
+                                    <li>Advisor: Prof. Andrea De Lucia</li>
+                                </ul>
+                            </li>
+                            <li>October 2011 - September 2014<ul>
+                                    <li>Master's (M.Sc.) degree in Computer Science @ <a
+                                            href="https://www.unisa.it/">University of Salerno</a></li>
+                                    <li>Advisor: Prof. Andrea De Lucia</li>
+                                    <li>Grade: 110/110 cum laude</li>
+                                </ul>
+                            </li>
+                            <li>October 2007 - May 2011</a>
+                                <ul>
+                                    <li>Bachelor (B.Sc.) degree in Computer Science @ <a
+                                            href="https://www.unimol.it/">University of Molise</a></li>
+                                    <li>Advisor: Prof. Giovanni Capobianco</li>
+                                    <li>Grade: 110/110 cum laude</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="col-sm-6">
                         <h3 class="mb-2">Research Interests</h3>
                         <ul>
@@ -150,14 +185,17 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-sm-6">
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-sm-12">
                         <p class="mb-5 text-center">
-                            <a href="http://soft.vub.ac.be/" target="_blank">
-                                <img id="vub-logo" src="img/jads.png" alt="" />
+                            <a href="https://www.unisa.it/" target="_blank">
+                                <img id="unisa-logo" src="img/unisa.jpg" alt="" />
                             </a>
-                            <br /> Jheronimus Academy of Data Science
-                            <br /> Sint Janssingel 92
-                            <br /> 5211 DA 's-Hertogenbosch - The Netherlands
+                            <br /> Università degli Studi di Salerno
+                            <br /> Via Giovanni Paolo II, 132
+                            <br /> 84084 Fisciano (SA) - Italy
                         </p>
                     </div>
                 </div>
@@ -166,7 +204,7 @@
                     <div class="col-sm-12">
                         <ul class="list-inline list-social-icons mb-0">
                             <li class="list-inline-item">
-                                <a href="mailto:d.dinucci@uvt.nl">
+                                <a href="mailto:d.dinucci@ieee.org">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
