Change home style. Add some teaching activities. Add some services.

--- a/index.html
+++ b/index.html
@@ -94,30 +94,32 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-4">
+                        <h3 class="mb-2">About Me</h3>
                         <p class="mb-5 text-justify">I am an assistant professor at the Department of Computer Science
                             of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
                             My research is on <b>empirical software engineering</b>, particularly <b>software
                                 maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
                                 learning</b>, <b>search-based
                                 algorithms</b>, and <b>mining of software repositories</b>.<br />
-                            I serve as a program committee member for international conferences and a
-                            referee for international journals in software engineering and artificial
-                            intelligence.<br />
-                            I am a member at large of the <a href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE Conference Activities Committee</a>.<br />
-                            I serve as editor for Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming, program committee member for international conferences, and referee for international journals in software engineering and artificial intelligence.<br />
-                            I am an IEEE Software initiative team member and the social media manager of Elsevier
-                            Science of Computer Programming.<br />
-                            Finally, I am a member of the <a
-                            href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
-                            committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
-                            
+                            I am a member at large of the <a
+                                href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
+                                Conference Activities Committee</a>. I serve as editor for
+                            Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
+                            program committee member for international conferences, and referee for international
+                            journals in software engineering and artificial intelligence, for which I received several
+                            Distinguished/Outstanding Reviewer Awards.<br />
+                            I am an <a
+                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
+                                Software initiative team member</a> and the social media manager of
+                            Elsevier Science of Computer Programming. I am a member of the <a
+                                href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
+                                committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
+
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <h3 class="mb-2">Timeline</h3>
                         <ul>
                             <li>January 2022 - now</li>
@@ -165,7 +167,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <h3 class="mb-2">Research Interests</h3>
                         <ul>
                             <li>Artificial Intelligence for Software Engineering
@@ -189,7 +191,7 @@
 
                 <div class="row text-center">
                     <div class="col-sm-12">
-                        <p class="mb-5 text-center">
+                        <p class="mb-5 mt-5 text-center">
                             <a href="https://www.unisa.it/" target="_blank">
                                 <img id="unisa-logo" src="img/unisa.jpg" alt="" />
                             </a>
