--- a/services.html
+++ b/services.html
@@ -123,10 +123,8 @@
                         <p class="card-text text-justify small">
                             Elsevier Science of Computer Programming: 2021 - Actual<br />
                             Elsevier Journal of Systems and Software: 2021 - Actual<br />
-                            Guest Editor for Elsevier Science of Computer Programming for the <a
-                                href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
-                                target="blank">special issue on "Software Health of Software Ecosystems"</a>: 2020 -
-                            Actual<br />
+                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software Health of Software Ecosystems": 2020 -
+                            2021<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
                         </p>
@@ -137,6 +135,10 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
+                            &emsp;2022 (Research Track)<br />
+                            &emsp;2021 (Research Track)<br />
+                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             IEEE/ACM International Conference on Mining Software Repositories (MSR):<br />
                             &emsp;2022 (Technical Papers Track)<br />
                             IEEE International Conference on Program Comprehension (ICPC):<br />
@@ -155,9 +157,6 @@
                             &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo
                             Track)<br />
                             &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
-                            &emsp;2021 (Research Track)<br />
-                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2021 (Tool Demo Track)<br />
                             &emsp;2019 (Tool Demo Track)<br />
