--- a/teaching.html
+++ b/teaching.html
@@ -104,13 +104,31 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>Software Dependability</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2022 (co-lectured with <a
+                                        href="https://fpalomba.github.io/" target="blank">F. Palomba</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering, Management, and Evolution</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2022 (co-lectured with <a
+                                        href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
+                                        Lucia</a>)
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
                                     <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
                                         Eindhoven)</td>
                                     <td>Spring 2021 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D.A. Tamburri</a>)<br />Spring 2020 (co-lectured with
+                                            target="blank">D.A. Tamburri</a>)
+                                        <br />Spring 2020 (co-lectured with
                                         <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank">D.A. Tamburri</a>)
                                     </td>
