Change home style

--- a/index.html
+++ b/index.html
@@ -94,95 +94,67 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <h3 class="mb-2">About Me</h3>
-                        <p class="mb-5 text-justify">I am an assistant professor at the Department of Computer Science
-                            of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
-                            My research is on <b>empirical software engineering</b>, particularly <b>software
-                                maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
-                                learning</b>, <b>search-based
-                                algorithms</b>, and <b>mining of software repositories</b>.<br />
-                            I am a member at large of the <a
-                                href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
-                                Conference Activities Committee</a>. I serve as editor for
-                            Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
-                            program committee member for international conferences, and referee for international
-                            journals in software engineering and artificial intelligence, for which I received several
-                            Distinguished/Outstanding Reviewer Awards.<br />
-                            I am an <a
-                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
-                                Software initiative team member</a> and the social media manager of
-                            Elsevier Science of Computer Programming. I am a member of the <a
-                                href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
-                                committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
+                        I am an assistant professor at the Department of Computer Science
+                        of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
+                        My research is on <b>empirical software engineering</b>, particularly <b>software
+                            maintenance and evolution</b>, <b>software testing</b>, and <b>green software
+                            engineering</b>, where I apply <b>machine
+                            learning</b>, <b>search-based
+                            algorithms</b>, and <b>mining of software repositories</b>.<br />
+                        I am a member at large of the <a
+                            href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
+                            Conference Activities Committee</a>. I serve as editor for
+                        Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
+                        program committee member for international conferences, and referee for international
+                        journals in software engineering and artificial intelligence, for which I received several
+                        Distinguished/Outstanding Reviewer Awards.<br />
+                        I am an <a
+                            href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
+                            Software initiative team member</a> and the social media manager of
+                        Elsevier Science of Computer Programming. I am a member of the <a
+                            href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
+                            committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
 
-                            You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
+                        You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <h3 class="mb-2">Timeline</h3>
                         <ul>
                             <li>January 2022 - now</li>
                             <ul>
-                                <li>Assistant Professor @ <a href="https://www.unisa.it/">University of Salerno</a></li>
-                                <li>Department of Computer Science</li>
+                                <li>Assistant Professor @ University of Salerno - Department of Computer Science</li>
                             </ul>
                             </li>
                             <li>January 2020 - December 2021</li>
                             <ul>
-                                <li>Assistant Professor @ <a href="https://www.jads.nl/">Jheronimus
-                                        Academy of Data Science</a></li>
-                                <li>with Prof. Willem-Jan van den Heuvel</li>
+                                <li>Assistant Professor @ Tilburg University - Jheronimus Academy of Data Science</a></li>
                             </ul>
                             </li>
                             <li>January 2018 - December 2019</a>
                                 <ul>
-                                    <li>Post-doc Researcher @ <a href="https://www.vub.be/">Vrije
-                                            Universiteit Brussel</a></li>
-                                    <li>with Prof. Coen De Roover</li>
+                                    <li>Post-doc Researcher @ Vrije Universiteit Brussel - Software Languages Lab</li>
                                 </ul>
                             </li>
                             <li>December 2014 - March 2018
                                 <ul>
-                                    <li>Ph.D. in Management & Information Technology @ <a
-                                            href="https://www.unisa.it/">University of Salerno</a></li>
-                                    <li>Funded by University of Salerno</li>
+                                    <li>Ph.D. in Management & Information Technology @ University of Salerno</li>
                                     <li>Advisor: Prof. Andrea De Lucia</li>
                                 </ul>
                             </li>
                             <li>October 2011 - September 2014<ul>
-                                    <li>Master's (M.Sc.) degree in Computer Science @ <a
-                                            href="https://www.unisa.it/">University of Salerno</a></li>
+                                    <li>Master's degree in Computer Science @ University of Salerno</li>
                                     <li>Advisor: Prof. Andrea De Lucia</li>
                                     <li>Grade: 110/110 cum laude</li>
                                 </ul>
                             </li>
                             <li>October 2007 - May 2011</a>
                                 <ul>
-                                    <li>Bachelor (B.Sc.) degree in Computer Science @ <a
-                                            href="https://www.unimol.it/">University of Molise</a></li>
+                                    <li>Bachelor degree in Computer Science @ University of Molise</li>
                                     <li>Advisor: Prof. Giovanni Capobianco</li>
                                     <li>Grade: 110/110 cum laude</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4">
-                        <h3 class="mb-2">Research Interests</h3>
-                        <ul>
-                            <li>Artificial Intelligence for Software Engineering
-                                <ul>
-                                    <li>Machine Learning for Software Engineering</li>
-                                    <li>Search-based Software Engineering</li>
-                                    <li>Pattern Mining of Source Code</li>
-                                </ul>
-                            </li>
-                            <li>Empirical Software Engineering
-                                <ul>
-                                    <li>Software Maintenance and Evolution</li>
-                                    <li>Software Testing</li>
-                                    <li>Mining Software Repositories</li>
-                                    <li>Green Software Engineering</li>
                                 </ul>
                             </li>
                         </ul>
